update register
